--- a/.github/workflows/front-end-cicd.yml
+++ b/.github/workflows/front-end-cicd.yml
@@ -1,23 +1,29 @@
 name: Upload Website S3
-
 on:
   push:
     branches:
     - main
 
+permissions:
+  id-token: write
+  contents: read
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@master
-    - uses: jakejarvis/s3-sync-action@master
+    - uses: actions/checkout@v3
+    
+    - name: Configure AWS Credentials
+      uses: aws-actions/configure-aws-credentials@v4
       with:
-        args: --acl public-read --follow-symlinks --delete --exclude '.git/*'
-      env:
-        AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
-        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        AWS_SESSION_TOKEN: ${{ secrets.AWS_SESSION_TOKEN }}
+        role-to-assume: arn:aws:iam::586794466344:role/github-actions-role
+        aws-region: us-east-1
 
-        AWS_REGION: 'us-east-1' 
-        SOURCE_DIR: ''
+    - name: Sync to S3
+      run: |
+        aws s3 sync . s3://${{ secrets.AWS_S3_BUCKET }} \
+          --acl public-read \
+          --follow-symlinks \
+          --delete \
+          --exclude '.git/*'
