--- a/.github/workflows/front-end-cicd.yml
+++ b/.github/workflows/front-end-cicd.yml
@@ -1,8 +1,9 @@
-name: Upload Website S3
+name: Deploy to S3
+
 on:
   push:
     branches:
-    - main
+      - main
 
 permissions:
   id-token: write
@@ -11,19 +12,16 @@ permissions:
 jobs:
   deploy:
     runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v3
     
+    steps:
+    - uses: actions/checkout@v2
+
     - name: Configure AWS Credentials
-      uses: aws-actions/configure-aws-credentials@v4
+      uses: aws-actions/configure-aws-credentials@v2
       with:
-        role-to-assume: arn:aws:iam::586794466344:role/github-actions-role
+        role-to-assume: arn:aws:iam::586794466344:role/GitHubActionsRole
         aws-region: us-east-1
 
     - name: Sync to S3
       run: |
-        aws s3 sync . s3://${{ secrets.AWS_S3_BUCKET }} \
-          --acl public-read \
-          --follow-symlinks \
-          --delete \
-          --exclude '.git/*'
+        aws s3 sync . s3://ryanresume --no-progress --no-follow-symlinks --size-only
