--- a/.github/workflows/front-end-cicd.yml
+++ b/.github/workflows/front-end-cicd.yml
@@ -1,9 +1,8 @@
-name: Deploy to S3
-
+name: Upload Website S3
 on:
   push:
     branches:
-      - main
+    - main
 
 permissions:
   id-token: write
@@ -12,16 +11,16 @@ permissions:
 jobs:
   deploy:
     runs-on: ubuntu-latest
-    
     steps:
-    - uses: actions/checkout@v2
-
+    - uses: actions/checkout@v3
+    
     - name: Configure AWS Credentials
-      uses: aws-actions/configure-aws-credentials@v2
+      uses: aws-actions/configure-aws-credentials@v4
       with:
-        role-to-assume: arn:aws:iam::586794466344:role/GitHubActionsRole
+        role-to-assume: arn:aws:iam::586794466344:role/github-actions-role
         aws-region: us-east-1
 
     - name: Sync to S3
       run: |
-        aws s3 sync . s3://ryanresume --no-progress --no-follow-symlinks --size-only
+        aws s3 sync . s3://${{ secrets.AWS_S3_BUCKET }} \
+        --no-progress --no-follow-symlinks --size-only
