--- a/.github/workflows/back-end-cicd.yaml
+++ b/.github/workflows/back-end-cicd.yaml
@@ -1,56 +1,55 @@
-name: Test and Deploy Terraform
+name: "Terraform CI/CD"
 
 on:
   push:
     branches:
       - main
-    paths:
-      - '**.py'      # Trigger on Python file changes
-      - '**.tf'      # Trigger on Terraform file changes
-      - '**.tfvars'  # Trigger on Terraform variables files
+  pull_request:
+    branches:
+      - main
 
 permissions:
   id-token: write
   contents: read
+  pull-requests: write
 
 jobs:
-  test-and-deploy:
+  terraform:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+    - name: Checkout
+      uses: actions/checkout@v3
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.13'
+    - name: Configure AWS Credentials
+      uses: aws-actions/configure-aws-credentials@v4
+      with:
+        role-to-assume: ${{ secrets.ROLE_TO_ASSUME }}
+        aws-region: us-east-1
 
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install pytest
-          pip install -r requirements.txt
-          
-      - name: Run tests
-        run: |
-          pytest
+    - name: Setup Terraform
+      uses: hashicorp/setup-terraform@v2
+      with:
+        terraform_version: "5.80.0"
 
-      - name: Configure AWS credentials
-        if: success()  # Only run if tests pass
-        uses: aws-actions/configure-aws-credentials@v4
-        with:
-          role-to-assume: arn:aws:iam::586794466344:role/github-actions-role
-          aws-region: us-east-1
+    - name: Terraform Format
+      id: fmt
+      run: terraform fmt -check
+      continue-on-error: true
 
-      - name: Setup Terraform
-        if: success()
-        uses: hashicorp/setup-terraform@v2
+    - name: Terraform Init
+      id: init
+      run: terraform init
 
-      - name: Terraform Init
-        run: terraform init
+    - name: Terraform Validate
+      id: validate
+      run: terraform validate
 
-      - name: Terraform Plan
-        run: terraform plan
+    - name: Terraform Plan
+      id: plan
+      run: |
+        terraform plan -no-color -out=tfplan
+      continue-on-error: true
 
-      - name: Terraform Apply
-        if: success()
-        run: terraform apply -auto-approve
+    - name: Terraform Apply
+      if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+      run: terraform apply -auto-approve tfplan
