--- a/.github/workflows/back-end-cicd.yaml
+++ b/.github/workflows/back-end-cicd.yaml
@@ -51,9 +51,8 @@ jobs:
     - name: Terraform Plan
       id: plan
       run: |
-        terraform plan -no-color -out=tfplan
-        -var="bucket_name=${{ secrets.AWS_S3_BUCKET }}"
-      continue-on-error: true
+        terraform plan -var="bucket_name=${{ secrets.AWS_S3_BUCKET }}" -out=tfplan
+      continue-on-error: false
       
 
     - name: Terraform Apply
