--- a/.github/workflows/back-end-cicd.yaml
+++ b/.github/workflows/back-end-cicd.yaml
@@ -41,7 +41,7 @@ jobs:
 
     - name: Force Unlock State
       run: |
-        terraform force-unlock -force "d1929f14-88e2-533e-ffd2-853754e1f53c"
+        terraform force-unlock -force ${{ secrets.STATE_LOCK }}
       continue-on-error: true
 
     - name: Terraform Format
@@ -56,7 +56,12 @@ jobs:
     - name: Terraform Plan
       id: plan
       run: |
-        terraform plan -var="bucket_name=${{ secrets.AWS_S3_BUCKET }}" -out=tfplan
+        terraform plan \
+        -var="bucket_name=${{ secrets.AWS_S3_BUCKET }}" \
+        -var="domain_name=${{ secrets.DOMAIN_NAME }}" \
+        -var="domain_name=${{ secrets.STATE_LOCK }}" \
+        -var="domain_name=${{ secrets.DYNAMO_DB}}" \
+        -out=tfplan
       continue-on-error: false
       
 
