--- a/.github/workflows/back-end-cicd.yaml
+++ b/.github/workflows/back-end-cicd.yaml
@@ -59,7 +59,7 @@ jobs:
         terraform plan \
         -var="bucket_name=${{ secrets.AWS_S3_BUCKET }}" \
         -var="domain_name=${{ secrets.DOMAIN_NAME }}" \
-        -var="domain_name=${{ secrets.DYNAMO_DB}}" \
+        -var="dynamo_db_arn=${{ secrets.DYNAMO_DB_ARN}}" \
         -out=tfplan
       continue-on-error: false
       
