--- a/.github/workflows/front-end-cicd.yml
+++ b/.github/workflows/front-end-cicd.yml
@@ -17,7 +17,7 @@ jobs:
     - name: Configure AWS Credentials
       uses: aws-actions/configure-aws-credentials@v4
       with:
-        role-to-assume: ${{ secrets.ROLE_TO_ASSUME }}  # Fixed this line
+        role-to-assume: ${{ secrets.ROLE_TO_ASSUME }} 
         aws-region: us-east-1
 
     - name: Sync to S3
